Import changes from 1&1 SVN repository